# memeplex

./: .env.example  .eslintrc.cjs  .gitignore  .mysql.env.example  .prettierrc  Dockerfile  README.md  TESTING.md  docker-compose.yml  drizzle.config.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json  webpack.config.ts
configs/: loki.yaml  promtail.yaml
constants/: OCR_SPACE_PRO_API.ts  PROXY_LIST_API_URLS.js  PROXY_LIST_API_URLS.ts  amqpChannels.ts  delays.ts  fuseOptions.ts  index.js  index.ts  publisher.ts  telegramChat.ts  topics.ts  wordsForElasticEntititesCounter.ts
frontend/: .eslintrc.cjs  .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
promtail/: docker-config.yaml
scripts/: broadcast.ts  check-proxies.js  count-users.sh  create-index.js  create-index.ts  create-tables.js  db-migrate.ts  delete-index.ts  elastic-certs.sh  elastic-count-words.ts  elastice-certs.sh  find-new-proxies.js  generate-sitemap.js  generate-sitemap.ts  insert-keys-into-db.js  insert-keys-to-db.js  insert-proxies-to-db.js  mysql-query.sh  search.js  search.ts  setBotTopics.ts
services/: downloader.js  index.js  index.ts  memesearch.js  memesearch.ts  nlp.py  ocr.js  server.js  tg-parser.js
src/: channel-watcher.js  const.js  custom-errors.js  download-images.js  elastic.js  mysql-queries.js  ocr-images.js  ocr-space.js  search.js  utils.js
static/: index.html  main.js  style.css
tests/: fuse.test.ts  nlp.test.ts
types/: CryptoPay.d.ts  RequiredProperty.ts  SplitString.ts  env.d.ts  index.ts  (+1 more)
(+890 files in other folders)
