[tool.poetry]
name = "memesearch"
version = "0.1.0"
description = ""
authors = ["Vishtar <viktor.kishchuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
nltk = "^3.8.1"
pymorphy2 = "^0.9.1"
pika = "^1.3.2"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
